--- a/a.ipynb
+++ b/a.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPETjU3diRZGlRLMF+OmZ8z",
+      "authorship_tag": "ABX9TyMRhQhAQq3lCWrn9rpq5C9T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +34,13 @@
       "metadata": {
         "id": "jrNQiTtlaa21"
       },
-      "execution_count": 19,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "dados = pd.read_excel(\"https://github.com/LopezSC13/teste2/raw/main/bases_procvv.xlsx\")\n",
-        "\n",
         "dados"
       ],
       "metadata": {
@@ -50,9 +49,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "ebbd6920-792e-4ada-cea5-3d612028726a"
+        "outputId": "453ef57e-1531-4877-ecff-adb3dc0649c0"
       },
-      "execution_count": 20,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a8024410-60c1-44c6-ae7b-f5065a64c1cf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9f254a5c-095c-4ea0-88a7-0ed6db0bbded\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -173,7 +172,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a8024410-60c1-44c6-ae7b-f5065a64c1cf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f254a5c-095c-4ea0-88a7-0ed6db0bbded')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -225,12 +224,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a8024410-60c1-44c6-ae7b-f5065a64c1cf button.colab-df-convert');\n",
+              "        document.querySelector('#df-9f254a5c-095c-4ea0-88a7-0ed6db0bbded button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a8024410-60c1-44c6-ae7b-f5065a64c1cf');\n",
+              "        const element = document.querySelector('#df-9f254a5c-095c-4ea0-88a7-0ed6db0bbded');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -250,8 +249,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-99591324-1826-4394-bda4-2856dac7360f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-99591324-1826-4394-bda4-2856dac7360f')\"\n",
+              "    <div id=\"df-8e2c6b00-242a-4685-af68-67ed8a98c3aa\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e2c6b00-242a-4685-af68-67ed8a98c3aa')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -370,14 +369,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-99591324-1826-4394-bda4-2856dac7360f button');\n",
+              "            document.querySelector('#df-8e2c6b00-242a-4685-af68-67ed8a98c3aa button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_72861619-8d20-4c1c-844e-f17f39104153\">\n",
+              "  <div id=\"id_8ff66b84-c142-49c5-8a56-7944060995b1\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -421,7 +420,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_72861619-8d20-4c1c-844e-f17f39104153 button.colab-df-generate');\n",
+              "        document.querySelector('#id_8ff66b84-c142-49c5-8a56-7944060995b1 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -442,34 +441,33 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 85
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "dados.shape\n",
-        "9"
+        "dados.shape\n"
       ],
       "metadata": {
         "id": "Icxp0vLIc6vw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9578ee9c-e7e2-4cc7-c4f5-8f789e7edcf3"
+        "outputId": "be6d2897-b6e4-4665-d604-a4789abc167a"
       },
-      "execution_count": 21,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "9"
+              "(96, 3)"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 86
         }
       ]
     },
@@ -485,9 +483,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "63cb0fbb-e4da-4632-c5cc-7ac2b289820e"
+        "outputId": "659ac41c-efa0-4c69-8c92-76c6385ab3cd"
       },
-      "execution_count": 22,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +508,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9d441a58-4961-4e1b-b366-2debb6a7e42c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dab7e7c1-67c3-4642-a450-28f3ceb1f572\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -608,7 +606,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d441a58-4961-4e1b-b366-2debb6a7e42c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dab7e7c1-67c3-4642-a450-28f3ceb1f572')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -660,12 +658,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9d441a58-4961-4e1b-b366-2debb6a7e42c button.colab-df-convert');\n",
+              "        document.querySelector('#df-dab7e7c1-67c3-4642-a450-28f3ceb1f572 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9d441a58-4961-4e1b-b366-2debb6a7e42c');\n",
+              "        const element = document.querySelector('#df-dab7e7c1-67c3-4642-a450-28f3ceb1f572');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -685,8 +683,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f5ba4a26-3c5d-4f41-a680-4a96d9ce22d6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f5ba4a26-3c5d-4f41-a680-4a96d9ce22d6')\"\n",
+              "    <div id=\"df-5d87212c-3d03-41bd-9d85-079dd9fba6d6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d87212c-3d03-41bd-9d85-079dd9fba6d6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -805,14 +803,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f5ba4a26-3c5d-4f41-a680-4a96d9ce22d6 button');\n",
+              "            document.querySelector('#df-5d87212c-3d03-41bd-9d85-079dd9fba6d6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_6f76ed23-5f14-4f5c-82f4-f4822031fcbf\">\n",
+              "  <div id=\"id_ad4b0873-b7d7-4e33-8957-51b41649d814\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -856,7 +854,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_6f76ed23-5f14-4f5c-82f4-f4822031fcbf button.colab-df-generate');\n",
+              "        document.querySelector('#id_ad4b0873-b7d7-4e33-8957-51b41649d814 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -877,7 +875,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 87
         }
       ]
     },
@@ -892,9 +890,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "fdfc5545-57af-4c6b-b2d6-5807553800a1"
+        "outputId": "dcd2d401-41ba-4c83-c1b5-3da9eacd5931"
       },
-      "execution_count": 23,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +907,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-788188ba-5ecd-4ef0-97a3-bb78d74ed512\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7b5ed252-ad19-4274-8f58-8bfe6c055221\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -970,7 +968,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-788188ba-5ecd-4ef0-97a3-bb78d74ed512')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7b5ed252-ad19-4274-8f58-8bfe6c055221')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1022,12 +1020,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-788188ba-5ecd-4ef0-97a3-bb78d74ed512 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7b5ed252-ad19-4274-8f58-8bfe6c055221 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-788188ba-5ecd-4ef0-97a3-bb78d74ed512');\n",
+              "        const element = document.querySelector('#df-7b5ed252-ad19-4274-8f58-8bfe6c055221');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1047,8 +1045,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-0b6356b2-af86-4537-9bd2-6c111c28d277\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0b6356b2-af86-4537-9bd2-6c111c28d277')\"\n",
+              "    <div id=\"df-07bfa48b-d5e9-4672-8e6b-55f83fc43755\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-07bfa48b-d5e9-4672-8e6b-55f83fc43755')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1167,7 +1165,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-0b6356b2-af86-4537-9bd2-6c111c28d277 button');\n",
+              "            document.querySelector('#df-07bfa48b-d5e9-4672-8e6b-55f83fc43755 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1184,16 +1182,73 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 88
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "df = pd.DataFrame(dados)\n",
+        "\n",
+        "\n",
+        "nome_desejado = input (\"Digite a Regional desejada: \")\n",
+        "\n",
+        "# Cria a máscara booleana\n",
+        "mascara = df['REGIONAL'] == nome_desejado\n",
+        "\n",
+        "# Seleciona as linhas correspondentes à máscara\n",
+        "linhas_selecionadas = df[mascara]\n",
+        "\n",
+        "# Imprime o resultado\n",
+        "print(linhas_selecionadas)\n",
+        "\n",
+        "# Conta o número de linhas selecionadas\n",
+        "contagem_linhas_selecionadas = linhas_selecionadas.shape[0]\n",
+        "\n",
+        "# Imprime a contagem\n",
+        "print(f\"A {nome_desejado}  possui : {contagem_linhas_selecionadas} centros\")"
+      ],
       "metadata": {
-        "id": "UIn3ozCGWvaI"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "57vYJSsgOHEg",
+        "outputId": "033d875e-61c8-499d-b27a-393853d45184"
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a Regional desejada: DR3\n",
+            "   ANTIGA                                     CENTRO REGIONAL\n",
+            "40   DRMC                             CAIP JACARANDÁ      DR3\n",
+            "41   DRMC                            CAIP ANDORINHAS      DR3\n",
+            "42   DRMC                              CASA CAMPINAS      DR3\n",
+            "43   DRMC              CASA DE SEMILIBERDADE JUNDIAÍ      DR3\n",
+            "44   DRMC                           CASA LARANJEIRAS      DR3\n",
+            "45   DRMC                               CASA LIMEIRA      DR3\n",
+            "46   DRMC                  CASA MAESTRO CARLOS GOMES      DR3\n",
+            "47   DRMC                       CASA MANACÁ DA SERRA      DR3\n",
+            "48   DRMC                            CASA MOGI MIRIM      DR3\n",
+            "49   DRMC                            CASA MORRO AZUL      DR3\n",
+            "50   DRMC                            CASA NOVO TEMPO      DR3\n",
+            "51   DRMC                        CASA RIO PIRACICABA      DR3\n",
+            "52   DRMC                               CASA TAPAJÓS      DR3\n",
+            "83   DRVP                               CASA ATIBAIA      DR3\n",
+            "84   DRVP                         CASA CARAGUATATUBA      DR3\n",
+            "85   DRVP  CASA DE SEMILIBERDADE SÃO JOSÉ DOS CAMPOS      DR3\n",
+            "89   DRVP                               CASA JACAREI      DR3\n",
+            "90   DRVP                                CASA LORENA      DR3\n",
+            "92   DRVP                  CASA SERRA DA MANTIQUEIRA      DR3\n",
+            "93   DRVP                               CASA TAMOIOS      DR3\n",
+            "94   DRVP                               CASA TAUBATE      DR3\n",
+            "A DR3  possui : 21 centros\n"
+          ]
+        }
+      ]
     }
   ]
 }
